--- a/styles-conference/assets/stylesheets/main.css
+++ b/styles-conference/assets/stylesheets/main.css
@@ -41,3 +41,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 } 
+
+.footer {
+  color: blue;
+  font-size: 20px;
+}
+
+#headline {
+  color: red;
+  font-size: 48px;
+}
